AUTOMAKE_OPTIONS = foreign  subdir-objects 
# SUBDIRS = lib # 本目录下的lib目录需要编译
# noinst_PROGRAMS = a.out # 本目录的文件编译成可执行文件a.out，如果有多个，用空格隔开，然后下面分别写它们的SOURCES和LDADD
# bin_PROGRAMS = a.out
# a_out_SOURCES = filetype.c # 编译a.out可执行文件需要的源文件列表，如果有多个，用空格隔开
# a_out_LDADD = lib/libfile.a # 编译需要的库文件列表，如果有多个，用空格隔开

noinst_LIBRARIES = libfdir.a
# libfdir_a_SOURCES = filetype.c
libfdir_a_SOURCES = myaccess.c

